<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.magnum.melonds.ui.settings.preferences.RetroAchievementsProfilePreference
        android:key="ra_profile"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="ra_login"
        android:title="@string/login_with_retro_achievements"
        app:iconSpaceReserved="false" />

    <SwitchPreference
        android:key="ra_enabled"
        android:title="@string/enable_retroachievements"
        android:summary="@string/enable_retroachievements_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="ra_hardcore_enabled"
        android:title="@string/hardcore_mode"
        android:summary="@string/hardcore_mode_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="ra_rich_presence"
        android:title="@string/enable_rich_presence"
        android:summary="@string/rich_presence_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="ra_unofficial_enabled"
        android:title="@string/show_unofficial_achievements"
        android:summary="@string/show_unofficial_achievements_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="ra_encore_enabled"
        android:title="@string/enable_encore_mode"
        android:summary="@string/enable_encore_mode_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="false" />

    <ListPreference
        android:key="ra_offline_backend"
        android:title="@string/ra_offline_backend_title"
        android:summary="@string/ra_offline_backend_summary"
        android:entries="@array/ra_offline_backend_options"
        android:entryValues="@array/ra_offline_backend_values"
        android:defaultValue="built_in"
        app:iconSpaceReserved="false"
        app:dependency="ra_login" />

    <SwitchPreference
        android:key="ra_offline_softcore_enabled"
        android:title="@string/offline_ra_softcore_enabled"
        android:summary="@string/offline_ra_softcore_enabled_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="ra_active_challenge_indicators"
        android:title="@string/show_active_challenge_indicators"
        android:summary="@string/show_active_challenge_indicators_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="ra_progress_indicators"
        android:title="@string/show_progress_indicators"
        android:summary="@string/show_progress_indicators_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="ra_leaderboard_indicators"
        android:title="@string/show_leaderboard_indicators"
        android:summary="@string/show_leaderboard_indicators_summary"
        app:iconSpaceReserved="false"
        app:dependency="ra_login"
        android:defaultValue="true" />
</PreferenceScreen>
